--- a/yoojo/index.html
+++ b/yoojo/index.html
@@ -332,7 +332,7 @@
                 <p class="text_vous">Automatisez la paie et le déclaratif de votre employé de maison. Obtenez des aides et 50 % de crédit d’impôt.</p>
                 <div class="decouvrir">
                     <div>
-                        <p><a href="#">Découvrir Yoojo Direct</a></p>
+                        <p><a class="" href="#">Découvrir Yoojo Direct</a></p>
                     </div>
                     <div>
 
@@ -343,6 +343,192 @@
                 <img class="img_vous" src="https://d1b747rczec55w.cloudfront.net/assets/yoojoDirectIllustration-9bc06f1818928be669e20d08f3a8d8701ee69abc031c15678074c65c24c82599.svg" alt="img_contact">
             </div>
         </div>
+        <div id="div_position_france">
+            <div class="div_body_text">
+                <h2 class="titre">Nous sommes partout en france</h2>
+            </div>
+            <div class="div_cadre_2">
+                <div class="cadre_2">
+                    <div class="img_cadre_2">
+                        <img class="img_2" src="https://d1b747rczec55w.cloudfront.net/assets/city/fr/paris-367832f28b827571fe90b150ac396a3392919f18d570a91f43492cca752e446a.jpg" alt="Taille de haie">
+                    </div>
+                    <div class="text_cadre_2">
+                        <p class="text_cadre_2">Service à domicile à</p>
+                    </div>
+                    <div class="div_prix">
+                        <p class="prix_cadre_2">Paris</p>
+                    </div>
+                </div>
+                <div class="cadre_2">
+                    <div class="img_cadre_2">
+                        <img src=https://d1b747rczec55w.cloudfront.net/assets/city/fr/marseille-4f993557dbddfe67377f17a68fa627621e50e12d6ccf9b6b7b172bbaa076d401.jpg class="img_2" alt="Aide">
+                    </div>
+                    <div class="text_cadre_2">
+                        <p class="text_cadre_2">Service à domicile à</p>
+                    </div>
+                    <div class="div_prix">
+                        <p class="prix_cadre_2">Marseille</p>
+                    </div>
+                </div>
+                <div class="cadre_2">
+                    <div class="img_cadre_2">
+                        <img src="https://d1b747rczec55w.cloudfront.net/assets/city/fr/lyon-e9442d3d640b16f1923da05b9b225f10153319c9feec656b5ea8b57d939402a0.jpg" class="img_2" alt="Ménage">
+                    </div>
+                    <div class="text_cadre_2">
+                        <p class="text_cadre_2">Service à domicile à</p>
+                    </div>
+                    <div class="div_prix">
+                        <p class="prix_cadre_2">Lyon</p>
+                    </div>
+                </div>
+                <div class="cadre_2">
+                    <div class="img_cadre_2">
+                        <img src="https://d1b747rczec55w.cloudfront.net/assets/city/fr/toulouse-cc0231a4d8334fd15ba29fd87fe41bf19a0506ad1f3ecf166b8c0d1db23e75dc.jpg" class="img_2" alt="Tondre">
+                    </div>
+                    <div class="text_cadre_2">
+                        <p class="text_cadre_2">Service à domicile à</p>
+                    </div>
+                    <div class="div_prix">
+                        <p class="prix_cadre_2">Toulouse</p>
+                    </div>
+                </div>
+                <div class="cadre_2">
+                    <div class="img_cadre_2">
+                        <img src="https://d1b747rczec55w.cloudfront.net/assets/city/fr/nice-e298de323bb5eeddd5779065e59d840af6b6966d06bf086dc5b0549f326ae4c7.jpg" class="img_2" alt="Meubles">
+                    </div>
+                    <div class="text_cadre_2">
+                        <p class="text_cadre_2">Service à domicile à</p>
+                    </div>
+                    <div class="div_prix">
+                        <p class="prix_cadre_2">Nice</p>
+                    </div>
+                </div>
+                <div class="cadre_2">
+                    <div class="img_cadre_2">
+                        <img src="https://d1b747rczec55w.cloudfront.net/assets/city/fr/nantes-f82768b5fa34f23478c90782ad88ccb8e6b8d48bc3fa2c742bb6d8dcea2fad93.jpg" class="img_2" alt="Meubles">
+                    </div>
+                    <div class="text_cadre_2">
+                        <p class="text_cadre_2">Service à domicile à</p>
+                    </div>
+                    <div class="div_prix">
+                        <p class="prix_cadre_2">Nantes</p>
+                    </div>
+                </div>
+                <div class="cadre_2">
+                    <div class="img_cadre_2">
+                        <img src="https://d1b747rczec55w.cloudfront.net/assets/city/fr/montpellier-010274dde053a79371baf347c73025a95a9f0bdd2468d3f84a725bbd3aa67943.jpg" class="img_2" alt="Meubles">
+                    </div>
+                    <div class="text_cadre_2">
+                        <p class="text_cadre_2">Service à domicile à</p>
+                    </div>
+                    <div class="div_prix">
+                        <p class="prix_cadre_2">Montpellier</p>
+                    </div>
+                </div>
+                <div class="cadre_2">
+                    <div class="img_cadre_2">
+                        <img src="https://d1b747rczec55w.cloudfront.net/assets/city/fr/bordeaux-14f12cce4859e273c99eb61ffe1c8efe79c04bda5e815c9fb4734289e88e66fe.jpg" class="img_2" alt="Meubles">
+                    </div>
+                    <div class="text_cadre_2">
+                        <p class="text_cadre_2">Service à domicile à</p>
+                    </div>
+                    <div class="div_prix">
+                        <p class="prix_cadre_2">Bordeau</p>
+                    </div>
+                </div>
+            </div>
+            <div class="div_service">
+                <p><a class="service" href="#">Voir toutes les villes ></a></p>
+            </div>
+        </div>
+        <div class="div_confiance_parent">
+            <div class="div_confiance_text">
+                <p class="titre_conf">Les utilisateurs nous font confiance</p>
+                <p class="text_conf">La satisfaction de nos utilisateurs est notre priorité. Vous souhaitez être convaincu que Yoojo est la bonne plateforme ? Découvrez les avis !</p>
+                <div class="decouvrir">
+                    <div>
+                        <p><a class="service" href="#">Voir tous les avis clients ></a></p>
+                    </div>
+                    <div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="div_avis_parent">
+                <div class="div_avis_conf">
+                    <div class="avi_conf">
+                        <div class="conf">
+
+                        </div>
+                        <div class="conf">
+                        
+                        </div>
+                    </div>
+                </div>
+                <div class="div_conf_text">
+                    <p class="conf_text">Une note de <span class="avi">4.6</span> sur 5 la base de <a href="#" class="avis">8152 avis</a>. Nos avis 4 et 5 étoiles.</p>
+                </div>
+            </div>
+        </div>
+        <div id="div_body_text">
+            <div class="text_gauche">
+                <h2 class="titre">Besoin de conseils ?</h2>
+            </div>
+        </div>
+        <div class="div_cadres_parent">
+            <div class="div_cadres">
+                <div class="cadre">
+                    <div class="div_cadre_img">
+                        <img class="img_cadre" src="https://d1b747rczec55w.cloudfront.net/uploads/guide/cover/30/thumbnail_944e94e0.jpeg" alt="bricole">
+                    </div>
+                    <div class="div_cadre_text">
+                        <p class="text_cadre">Où trouver facilement des cartons de déménagement</p> 
+                        <p>
+                            Vous avez besoin de cartons ? notre guide vous explique comment en trouver facilement
+                        </p> 
+                    </div>
+                </div>
+                <div class="cadre">
+                    <div class="div_cadre_img">
+                        <img class="img_cadre" src="https://d1b747rczec55w.cloudfront.net/uploads/guide/cover/26/thumbnail_328d36ec.jpeg" alt="bricole">
+                    </div>
+                    <div class="div_cadre_text">
+                        <p class="text_cadre">Encombrants Nantes : tout comprendre pour vous débarrasser de vos objets</p>
+                        <p>Découvrez ici toutes informations et les démarches pour vous débarrasser de vos encombrants à Nantes</p>
+                    </div>
+                </div>
+                <div class="cadre">
+                    <div class="div_cadre_img">
+                        <img class="img_cadre" src="https://d1b747rczec55w.cloudfront.net/uploads/guide/cover/8/thumbnail_10c1b8e5.jpeg" alt="bricole">
+                    </div>
+                    <div class="div_cadre_text">
+                        <p class="text_cadre">Comment nettoyer l'intérieur de sa voiture pas-à-pas</p> 
+                        <p>
+                            Le guide pas-à-pas pour nettoyer l'intérieur de ma voiture</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="div_sens_parent">
+        <div class="div_sens">
+            <div class="sens_text"></div>
+            <div class="div_sens_profil"></div>
+            <div class="div_sens_profil"></div>
+        </div>
+    </div>
+    <div class="div_chaines_parent">
+        <div class="div_chaines">
+            <div class="chaines"></div>
+            <div class="chaines"></div>
+            <div class="chaines"></div>
+            <div class="chaines"></div>
+            <div class="chaines"></div>
+            <div class="chaines"></div>
+        </div>
+    </div>
+    <div class="div_body_parent">
+        
     </div>
 </body>
 </html>
