--- a/Exercice_Javascript/Calculatrice_Js/index.html
+++ b/Exercice_Javascript/Calculatrice_Js/index.html
@@ -23,14 +23,14 @@
                 <td><button>X^Y</button></td>
                 <td><button>X^2</button></td>
                 <td><button>|x|</button></td>
-                <td><button>Ln</button></td>
+                <td><button>ln</button></td>
                 <td><button>Log</button></td>
                 <td><button>Sin</button></td>
             </tr>
             <tr>
                 <td><button>Cos</button></td>
                 <td><button>Tan</button></td>
-                <td><button>√X</button></td>
+                <td><button>√x</button></td>
                 <td><button>Expo</button></td>
                 <td><button>On</button></td>
                 <td><button>2nd</button></td>
@@ -44,7 +44,7 @@
                 <td><button onclick="afficher('3')">3</button></td>
                 <td> </td>
                 <td><button>DEL</button></td>
-                <td><button>AC</button></td>
+                <td><button onclick="effacer()">AC</button></td>
             </tr>
             <tr>
                 <td><button onclick="afficher('4')">4</button></td>
