--- a/Exercice_Javascript/Calculatrice_Js/index.html
+++ b/Exercice_Javascript/Calculatrice_Js/index.html
@@ -20,20 +20,20 @@
             <tr style="height: 20px;"></tr>
         
             <tr>
-                <td><button>X^Y</button></td>
-                <td><button>X^2</button></td>
-                <td><button>|x|</button></td>
-                <td><button>ln</button></td>
-                <td><button>Log</button></td>
-                <td><button>Sin</button></td>
+                <td><button onclick="puissance()">X^Y</button></td>
+                <td><button onclick="puissance2()">X^2</button></td>
+                <td><button onclick="abs()">|x|</button></td>
+                <td><button onclick="ln()">ln</button></td>
+                <td><button onclick="log()">Log</button></td>
+                <td><button onclick="sin()">Sin</button></td>
             </tr>
             <tr>
-                <td><button>Cos</button></td>
-                <td><button>Tan</button></td>
-                <td><button>√x</button></td>
-                <td><button>Expo</button></td>
+                <td><button onclick="cos()">Cos</button></td>
+                <td><button onclick="tan()">Tan</button></td>
+                <td><button onclick="racine()">√x</button></td>
+                <td><button onclick="expo()">Expo</button></td>
                 <td><button>On</button></td>
-                <td><button>2nd</button></td>
+                <td><button onclick="pi()">π</button></td>
             </tr>
             
             <tr style="height: 20px;"></tr>
@@ -43,8 +43,8 @@
                 <td><button onclick="afficher('2')">2</button></td> 
                 <td><button onclick="afficher('3')">3</button></td>
                 <td> </td>
-                <td><button>DEL</button></td>
-                <td><button onclick="effacer()">AC</button></td>
+                <td><button onclick="effacer()">DEL</button></td>
+                <td><button onclick="delet()">AC</button></td>
             </tr>
             <tr>
                 <td><button onclick="afficher('4')">4</button></td>
