--- a/Exercice_Javascript/Calculatrice_Js/index.html
+++ b/Exercice_Javascript/Calculatrice_Js/index.html
@@ -32,8 +32,8 @@
                 <td><button onclick="tan()">Tan</button></td>
                 <td><button onclick="racine()">√x</button></td>
                 <td><button onclick="expo()">Expo</button></td>
-                <td><button>On</button></td>
-                <td><button onclick="pi()">π</button></td>
+                <td><button onclick="py()">π</button></td>
+                <td><button onclick="fermer()">On</button></td>
             </tr>
             
             <tr style="height: 20px;"></tr>
